--- a/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
+++ b/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
@@ -2,6 +2,35 @@
 #mainImageNav{
     border: 2px solid red;
     width: 100%;
-    height: 400px;
-    
+    height: 37vw;
+    background-image: url('https://eddiebauer.scene7.com/is/image/EBContent/230222_hp_high-route_V2?$a8$');
+   background-size: cover;
+   position: relative;
+
+   
+}
+/* #mainImageNav>Button{
+ position: absolute;
+ bottom: 45px;
+ left: 85px;
+
+
+} */
+
+#mainImageNav>Button:hover{
+   color: whitesmoke;
+   font-weight: 500;
+   background-color: #4C4C4C ;
+}
+
+@media (min-width:300px) and (max-width:450px) {
+    #mainImageNav{
+       height: 70vw;
+    }
+}
+
+@media (min-width:451px) and (max-width:750px) {
+    #mainImageNav{
+       height: 57vw;
+    }
 }
