--- a/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
+++ b/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
@@ -1,6 +1,6 @@
 
 #mainImageNav{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100%;
     height: 37vw;
     background-image: url('https://eddiebauer.scene7.com/is/image/EBContent/230222_hp_high-route_V2?$a8$');
