--- a/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
+++ b/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
@@ -16,6 +16,11 @@
    background-color: #4C4C4C ;
 }
 
+#mainImageBoxThree{
+    width: 30%;
+    
+}
+
 @media (min-width:300px) and (max-width:450px) {
     #mainImageNav{
        height: 70vw;
