--- a/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
+++ b/my-app/src/Durgesh_Pages/Pages/Mainhomepage.css
@@ -13,7 +13,7 @@
 #mainImageNav>Button:hover{
    color: whitesmoke;
    font-weight: 500;
-   background-color: #4C4C4C ;
+   background-color: #333333 ;
 }
 
 #mainImageBoxThree{
