--- a/my-app/src/Durgesh_Pages/ComponentsSearchbar/SearchBar.css
+++ b/my-app/src/Durgesh_Pages/ComponentsSearchbar/SearchBar.css
@@ -5,8 +5,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 60px;
+    padding-top: 50px;
+    margin-bottom: 80px;
 }
 
  
